--- a/default.css
+++ b/default.css
@@ -47,7 +47,7 @@ h4 {
 	padding: 80;
 	text-transform: none;
 	text-align: justify;
-	font-family: Lucida Console;
+	font-family: Verdana;
 	font-size: 1.8em;
 	font-weight: 100;
 	color: rgba(0,0,0,.68);
